content/kapacitor/v0.10/tick/window_node.md
---
title: WindowNode
note: Auto generated by tickdoc

menu:
  kapacitor_010:
    name: Window
    identifier: window_node
    weight: 200
    parent: tick
---

Windows data over time. 
A window has a length defined by `period` 
and a frequency at which it emits the window to the pipeline. 

Example: 


```javascript
    stream
        .window()
            .period(10m)
            .every(5m)
        .httpOut('recent')
```

The above windowing example emits a window to the pipeline every `5 minutes` 
and the window contains the last `10 minutes` worth of data. 
As a result each time the window is emitted it contains half new data and half old data. 

NOTE: Time for a window (or any node) is implemented by inspecting the times on the incoming data points. 
As a result if the incoming data stream stops then no more windows will be emitted because time is no longer 
increasing for the window node. 


Properties
----------

Property methods modify state on the calling node. They do not add another node to the pipeline, and always return a reference to the calling node.

### Align

Wether to align the window edges with the zero time. 
If not aligned the window starts and ends relative to the 
first data point it receives. 


```javascript
node.align()
```


### Every

How often the current window is emitted into the pipeline. 


```javascript
node.every(value time.Duration)
```


### Period

The period, or length in time, of the window. 


```javascript
node.period(value time.Duration)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node. They do not modify the calling node.

### Alert

Create an alert node, which can trigger alerts. 


```javascript
node.alert()
```

Returns: [AlertNode](/kapacitor/v0.10/tick/alert_node/)


### Deadman

Helper function for creating an alert on low throughput, aka deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data.deadman(100.0, 10s)
    //Do normal processing of data
    data....
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data.stats(10s)
          .derivative('collected')
              .unit(10s)
              .nonNegative()
          .alert()
              .id('node \'stream0\' in task \'{{ .TaskName }}\'')
              .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "collected" | printf "%0.3f" }} points/10s.')
              .crit(lamdba: "collected" <= 100.0)
    //Do normal processing of data
    data....
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v0.10/tick/alert_node/) is the last piece it can be further modified as normal. 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 1s and checked every 10s.
    data.deadman(100.0, 10s).slack().channel('#dead_tasks')
    //Do normal processing of data
    data....
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data.deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data....
```



```javascript
node.deadman(threshold float64, interval time.Duration, expr ...tick.Node)
```

Returns: [AlertNode](/kapacitor/v0.10/tick/alert_node/)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node.derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v0.10/tick/derivative_node/)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given 
and results of previous expressions are made available to later expressions. 


```javascript
node.eval(expressions ...tick.Node)
```

Returns: [EvalNode](/kapacitor/v0.10/tick/eval_node/)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    .groupBy(*)
```



```javascript
node.groupBy(tag ...interface{})
```

Returns: [GroupByNode](/kapacitor/v0.10/tick/group_by_node/)


### HttpOut

Create an http output node that caches the most recent data it has received. 
The cached data is available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example if the task endpoint is at &#34;/api/v1/task/&lt;task_name&gt;&#34; and endpoint is 
&#34;top10&#34;, then the data can be requested from &#34;/api/v1/task/&lt;task_name&gt;/top10&#34;. 


```javascript
node.httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v0.10/tick/http_out_node/)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node.influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v0.10/tick/influx_d_b_out_node/)


### Join

Join this node with other nodes. The data is joined on timestamp. 


```javascript
node.join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v0.10/tick/join_node/)


### MapReduce

Perform a map-reduce operation on the data. 
The built-in functions under `influxql` provide the 
selection,aggregation, and transformation functions 
from the InfluxQL language. 

MapReduce may be applied to either a batch or a stream edge. 
In the case of a batch each batch is passed to the mapper independently. 
In the case of a stream all incoming data points that have 
the exact same time are combined into a batch and sent to the mapper. 


```javascript
node.mapReduce(mr MapReduceInfo)
```

Returns: [ReduceNode](/kapacitor/v0.10/tick/reduce_node/)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node.sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v0.10/tick/sample_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node.stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v0.10/tick/stats_node/)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node.union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v0.10/tick/union_node/)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node.where(expression tick.Node)
```

Returns: [WhereNode](/kapacitor/v0.10/tick/where_node/)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node.window()
```

Returns: [WindowNode](/kapacitor/v0.10/tick/window_node/)

